--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.kie.kogito.examples</groupId>
     <artifactId>kogito-springboot-examples</artifactId>
-    <version>999-SNAPSHOT</version>
+    <version>2.0.0-SNAPSHOT</version>
   </parent>
 
   <artifactId>process-postgresql-persistence-springboot</artifactId>
@@ -14,8 +14,8 @@
   <description>Kogito with PostgreSQL persistence - Spring Boot</description>
 
   <properties>
-    <version.org.kie.kogito>999-SNAPSHOT</version.org.kie.kogito>
-    <kogito.bom.version>999-SNAPSHOT</kogito.bom.version>
+    <version.org.kie.kogito>2.0.0-SNAPSHOT</version.org.kie.kogito>
+    <kogito.bom.version>2.0.0-SNAPSHOT</kogito.bom.version>
   </properties>
 
   <dependencyManagement>
@@ -129,7 +129,7 @@
       </dependencies>
     </profile>
   </profiles>
-  <repositories>
+  <!-- <repositories>
     <repository>
         <id>apache-public-repository-group</id>
         <name>Apache Public Repository Group</name>
@@ -144,5 +144,5 @@
             <updatePolicy>daily</updatePolicy>
         </snapshots>
     </repository>
-  </repositories>
+  </repositories> -->
 </project>
